--- a/src/Components/Conversacion.css
+++ b/src/Components/Conversacion.css
@@ -2,27 +2,32 @@
 
 .info-contacto { 
     color: white;
-    max-height: 100px;
+    max-height: 105px;
     background-color: #202C33;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .imagen-div{
-    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    overflow: hidden;
+    flex-shrink: 0;
 }
 
 
 .imagen {
-    align-items: flex-start;
-    padding: 10px;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .contacto {
-    width: 70%;
     padding: 40px;
     font-size: 20px;
     display: flex;
@@ -33,11 +38,10 @@
 
 .btn-div-top{
     width: 33%;
-    
 }
 
 .div_volver{
-    width: 10%;
+    width: 50px;
     align-items: center;
     display: flex;
 }
@@ -54,7 +58,7 @@
     outline: none; /* Eliminar el contorno en navegadores como Firefox */
 }
 .botones {
-    width: 40%;
+    width: 20%;
     align-items: center;
     display: flex;
 }
