--- a/src/Components/InfoContacto.css
+++ b/src/Components/InfoContacto.css
@@ -6,15 +6,19 @@
     height: 70vh; 
     background-color: gray;
     border-radius: 10px;
-
+    overflow: auto;
 }
 
 .div-titulo {
+    padding: 10px;
+    align-items: center;
+    height: 105px;
     display: flex;
     color: white;
     background-color:  #202C33;
     width: 100%;
-    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .titulo{
@@ -32,13 +36,19 @@
 }
 
 .div-imagen{
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 200px;
     height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 .imagen{
-    height: 100%;
     width: 100%;
+    height: 100%;
 }
 
 .div-botones{
