--- a/src/Components/ListaContactos.css
+++ b/src/Components/ListaContactos.css
@@ -2,19 +2,25 @@
     display: flex;
     flex-direction: column;
     background-color: black;
-    border-radius: 10px;
+    border-end-end-radius: 10px;
     width: 500px;
     height: 70vh; 
+    overflow: auto;
 }
 
-.div-titulo{
+.div-chats{
+    display: flex;
+    align-items: center;
+    height: 105px;
     color: white;
     padding: 15px;
     background-color:  #202C33;
-    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .contacto-container{
+    padding: 10px;
     display: flex;
     align-items: center;
     margin-bottom: 1em;
@@ -27,14 +33,18 @@
 
 
 .div-foto{
+    margin-right: 20px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
     width: 100px;
     height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 .imagen{
-    border-radius: 50%;
+    width: 100%;
 }
 
 .link {
@@ -50,4 +60,4 @@
 .ultima-conexion {
     font-size: 0.9em;
     color: grey;
-  }
+}
