--- a/src/Components/Conversacion.css
+++ b/src/Components/Conversacion.css
@@ -27,11 +27,15 @@
     object-fit: cover;
 }
 
+.nombre_contacto{
+    padding: 0;
+}
+
 .contacto {
-    padding: 40px;
-    font-size: 20px;
+    padding: 20px;
+    font-size: 90%;
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
 }
 
@@ -58,7 +62,7 @@
     outline: none; /* Eliminar el contorno en navegadores como Firefox */
 }
 .botones {
-    width: 20%;
+    gap: 10px;
     align-items: center;
     display: flex;
 }
@@ -80,14 +84,13 @@
 }
 
 .conversacion {
-    border-radius: 10px;
     background-color: white;
     background-image:url(https://i.pinimg.com/originals/c4/82/14/c4821433f0bb5ac2650e42a9ed06a382.jpg);
     overflow: hidden;
-    width: 500px;
-    height: 70vh; 
+    width: 100vw;
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }   
 
 .mensajes-container {
@@ -149,6 +152,7 @@
 .btn-div-bottom-3{
     display: flex;
     width: 10%;
+    margin-right: 10px;
 }
 
 
