--- a/src/Components/InfoContacto.css
+++ b/src/Components/InfoContacto.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 500px;
-    height: 70vh; 
+    width: 100vw;
+    height: 100vh;
     background-color: gray;
     border-radius: 10px;
     overflow: auto;
@@ -44,15 +44,17 @@
     height: 200px;
     border-radius: 50%;
     overflow: hidden;
+    flex-shrink: 0;
 }
 
 .imagen{
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .div-botones{
-
+    justify-content: center;
     display: flex;
     padding: 10px;
     gap: 20px;
@@ -91,11 +93,11 @@ span{
 }
 
 .div-funciones{
-width: 61%;
- background-color: #202C33;
- border-radius: 10px;
- padding: 20px;
- color: white;
+    width: 90vw;
+    background-color: #202C33;
+    border-radius: 10px;
+    padding: 20px;
+    color: white;
 }
 
 h3{
