--- a/src/Components/ListaContactos.css
+++ b/src/Components/ListaContactos.css
@@ -1,10 +1,18 @@
+.lista-contactos-container{
+    max-height: 100vh;
+    max-width: 100vw;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Roboto, sans-serif
+}
+
 .contactos-container{
     display: flex;
     flex-direction: column;
     background-color: black;
     border-end-end-radius: 10px;
-    width: 500px;
-    height: 70vh; 
+    width: 100vw;
     overflow: auto;
 }
 
