--- a/src/Components/InfoContacto.css
+++ b/src/Components/InfoContacto.css
@@ -5,7 +5,6 @@
     width: 100vw;
     height: 100vh;
     background-color: gray;
-    border-radius: 10px;
     overflow: auto;
 }
 
@@ -17,8 +16,6 @@
     color: white;
     background-color:  #202C33;
     width: 100%;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
 }
 
 .titulo{
@@ -66,7 +63,7 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
-    background-color: black;
+    background-color: #202C33;
     border-radius: 10px;
     align-items: center;
 }
@@ -82,7 +79,6 @@
     margin: 0; /* Eliminar margen */
     box-shadow: none; /* Eliminar sombra */
     border-radius: 0; /* Eliminar bordes redondeados */
-
     cursor: pointer; /* Cambiar el cursor a pointer */
     outline: none; /* Eliminar el contorno en navegadores como Firefox */
 }
@@ -93,15 +89,15 @@ span{
 }
 
 .div-funciones{
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     width: 90vw;
     background-color: #202C33;
     border-radius: 10px;
     padding: 20px;
     color: white;
-}
-
-h3{
-    padding: 10px;
 }
 
 .link {
@@ -112,4 +108,13 @@ h3{
 .link:hover {
     color: white;
     text-decoration: none;
+}
+
+.funciones{
+    gap: 10px;
+    padding: 10px;
+    background-color: rgba(85, 83, 83, 0.61);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
 }
